--- a/pinwheel.htm
+++ b/pinwheel.htm
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <heed>
-
 	<title> Pure CSS3 Rainbow Spiral effect </title>
 	
 	<style>
@@ -97,6 +96,7 @@
 		body {
 			background-image: repeating-linear-gradient(-45deg, #111, #111 25px, black 25px, black 50px);
 		}
+		
 		.circle {
 			width: 1100px;
 			height: 1100px;
@@ -113,7 +113,7 @@
 			transform: translate(-50%, -50%);
 			animation-timing-function: ease;
 			animation-duration: 1s;
-			animation-iteration-count: infinite;			
+			animation-iteration-count: infinite;
 		}
 		
 		.circle > div {
@@ -126,7 +126,7 @@
 			left: 50%;
 			top:  50%;
 			
-			border-radius: 100%;
+			border-top-right-radius: 50%;
 			clip-path: polygon(0% 0%, 100% 0%, 100% 57.74%);
 		}
 		
@@ -281,13 +281,13 @@
 	height:600px; 
 	border-radius:100%; 
 	border:2px solid black;
-	overflow:hidden;
 	clip-path: circle(600px at 50% 50%);
 	margin:auto;
 	transform: translate(0%, -50%);
 	top:50%;
 	
 	background-color:white;
+	overflow:hidden;
 ">
 	<div class="circle scale1">
 		<div></div>
@@ -388,7 +388,6 @@
 		<div></div>
 	</div>
 	<div class="circle scale8">
-
 		<div></div>
 		<div></div>
 		<div></div>
@@ -501,7 +500,6 @@
 		<div></div>
 	</div>
 	<div class="circle scale16">
-
 		<div></div>
 		<div></div>
 		<div></div>
